Bug 1639177 - Align checkbox in What's New panel to start r=Gijs,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D75943

UltraBlame original commit: 63e434e9fec084b475d7b6e57ee07e881ab8ad46

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -12620,14 +12620,121 @@ toggleWhatsNew
 -
 checkbox
 {
-margin
+background
+-
+color
+:
+var
+(
+-
+-
+arrowpanel
+-
+dimmed
+)
+;
+border
+-
+top
+:
+1px
+solid
+var
+(
+-
+-
+panel
+-
+separator
+-
+color
+)
+;
+padding
 -
 inline
 -
 start
 :
+18px
+;
+min
 -
-80px
+height
+:
+41px
+;
+}
+#
+PanelUI
+-
+whatsNew
+.
+panelMenu
+-
+toggleWhatsNew
+-
+checkbox
+:
+hover
+#
+PanelUI
+-
+whatsNew
+.
+panelMenu
+-
+toggleWhatsNew
+-
+checkbox
+:
+focus
+{
+background
+-
+color
+:
+var
+(
+-
+-
+arrowpanel
+-
+dimmed
+-
+further
+)
+;
+}
+#
+PanelUI
+-
+whatsNew
+.
+panelMenu
+-
+toggleWhatsNew
+-
+checkbox
+:
+active
+{
+background
+-
+color
+:
+var
+(
+-
+-
+arrowpanel
+-
+dimmed
+-
+even
+-
+further
+)
 ;
 }
 #
@@ -12649,7 +12756,6 @@ height
 ;
 margin
 :
-2px
 0
 ;
 }
@@ -12661,12 +12767,6 @@ checkbox
 [
 checked
 ]
-.
-panelMenu
--
-toggleWhatsNew
--
-checkbox
 {
 list
 -
@@ -12781,6 +12881,26 @@ repeat
 no
 -
 repeat
+;
+}
+#
+PanelUI
+-
+whatsNew
+checkbox
+:
+hover
+.
+checkbox
+-
+check
+{
+border
+-
+color
+:
+#
+0a84ff
 ;
 }
 #
